tests/sksl/errors/ReservedNameAsm.glsl
### Compilation failed:

error: 1: name 'asm' is reserved
int asm;
    ^^^
1 error
